tenants/b01/test/deploy/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: ai.mckensy.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
  tls:
    - hosts:
        - ai.mckensy.xyz
      secretName: open-webui-tls
